RESOLVED FIXED171279
[MediaStream macOS] Unable to apply frameRate constraint
https://bugs.webkit.org/show_bug.cgi?id=171279
Summary [MediaStream macOS] Unable to apply frameRate constraint
Eric Carlson
Reported 2017-04-25 10:27:48 PDT
AVCaptureDevice reports supported frame rates as an object with minimum and maximum values. These values are doubles, so we should cast to integers before comparing to avoid "failure" because of very small deltas.
Attachments
Proposed patch. (1.60 KB, patch)
2017-04-25 10:33 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2017-04-25 10:33:25 PDT
Created attachment 308113 [details] Proposed patch.
Radar WebKit Bug Importer
Comment 2 2017-04-25 10:34:01 PDT
youenn fablet
Comment 3 2017-04-25 10:35:43 PDT
Let's file a bug about moving mock sources to presets so that layout tests would actually hit that issue.
WebKit Commit Bot
Comment 4 2017-04-25 11:22:12 PDT
Comment on attachment 308113 [details] Proposed patch. Clearing flags on attachment: 308113 Committed r215746: <http://trac.webkit.org/changeset/215746>
WebKit Commit Bot
Comment 5 2017-04-25 11:22:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.