[MediaStream macOS] Unable to apply frameRate constraint https://bugs.webkit.org/show_bug.cgi?id=171279

Reviewed by Youenn Fablet.

No new tests, this doesn't affect the mock capture devices.

* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::supportsSizeAndFrameRate): Cast frame rate
ranges to int before comparing.


Canonical link: https://commits.webkit.org/188149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215746 268f45cc-cd09-0410-ab3c-d52691b4dbfc